deploy/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sccsos
  labels:
    app.kubernetes.io/name: sccsos
    app.kubernetes.io/version: "0.17.5"
