deploy/k8s/35-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sccsos
spec:
  ingressClassName: nginx
  rules:
  - host: sccsos.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sccsos
            port:
              number: 8765
